@@ -1,2 +1,29 @@
-# Assignment 2
+# Report Details
+Link to the Report: https://docs.google.com/document/d/1mjcLzm4THLj7-jp01uVueJyira5Uk3VZ_4MNRjH5czQ/edit
+
+
+
+# JavaFX 11.02
+Download Link: https://gluonhq.com/products/javafx/
+
+Bit of a paint to setup, so here is the steps:
+
+In IntelliJ:
+
+1) File -> Project Structure -> Project, set the project SDK to 11 and the language level to 11.
+2) File -> Project Structure -> Libraries, add the JavaFX sdk as a library, point towards the lib folder within the JavaFX SDK.
+
+3) This should allow IntelliJ to see the classes now.
+
+4) If the project is run, then you should get this error: "Error: JavaFX runtime components are missing, and are required to run this application"
+
+5) Fix this by going to Run -> Edit Configurations... and add the following VM option (Only for the user-interface module): --module-path "\path\to\javafx-sdk-12.0.1\lib" --add-modules javafx.controls,javafx.fxml
+
+Should work fine now
+
+# Contributors
+**Kevin Doung**, n9934731
+
+**Waldo Fouche**, n9950095
+
 
